--- a/co-ca-ro.html
+++ b/co-ca-ro.html
@@ -2,23 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bàn cờ vua</title>
 </head>
 <style>
-    table{
+    table {
         border-collapse: collapse;
     }
-    tr,td{
+
+    tr, td {
         border: 1px solid black;
         width: 30px;
         height: 30px;
     }
 
-</style><style>
-    table{
+</style>
+<style>
+    table {
         border-collapse: collapse;
     }
-    tr,td{
+
+    tr, td {
         border: 1px solid black;
         width: 30px;
         height: 30px;
@@ -28,19 +31,19 @@
 <body>
 <center>
     <table>
-                <tr>
-                    <td></td>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>6</td>
-                    <td>7</td>
-                    <td>8</td>
-                </tr>
         <tr>
-                       <td>A</td>
+            <td></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>A</td>
             <td></td>
             <td style="background: black"></td>
             <td></td>
@@ -51,7 +54,7 @@
             <td style="background: black"></td>
         </tr>
         <tr>
-                        <td>B</td>
+            <td>B</td>
             <td style="background: black"></td>
             <td></td>
             <td style="background: black"></td>
@@ -62,7 +65,7 @@
             <td></td>
         </tr>
         <tr>
-                        <td>C</td>
+            <td>C</td>
             <td></td>
             <td style="background: black"></td>
             <td></td>
@@ -73,7 +76,7 @@
             <td style="background: black"></td>
         </tr>
         <tr>
-                        <td>D</td>
+            <td>D</td>
             <td style="background: black"></td>
             <td></td>
             <td style="background: black"></td>
@@ -84,7 +87,7 @@
             <td></td>
         </tr>
         <tr>
-                        <td>E</td>
+            <td>E</td>
             <td></td>
             <td style="background: black"></td>
             <td></td>
@@ -95,7 +98,7 @@
             <td style="background: black"></td>
         </tr>
         <tr>
-                        <td>F</td>
+            <td>F</td>
             <td style="background: black"></td>
             <td></td>
             <td style="background: black"></td>
@@ -106,7 +109,7 @@
             <td></td>
         </tr>
         <tr>
-                        <td>G</td>
+            <td>G</td>
             <td></td>
             <td style="background: black"></td>
             <td></td>
@@ -117,7 +120,7 @@
             <td style="background: black"></td>
         </tr>
         <tr>
-                        <td>H</td>
+            <td>H</td>
             <td style="background: black"></td>
             <td></td>
             <td style="background: black"></td>
