--- a/co-ca-ro.html
+++ b/co-ca-ro.html
@@ -32,40 +32,18 @@
 <center>
     <table>
         <tr>
-            <td></td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
-            <td>7</td>
-            <td>8</td>
+            <td style="background: orange"></td>
+            <td style="background: orange">1</td>
+            <td style="background: orange">2</td>
+            <td style="background: orange">3</td>
+            <td style="background: orange">4</td>
+            <td style="background: orange">5</td>
+            <td style="background: orange">6</td>
+            <td style="background: orange">7</td>
+            <td style="background: orange">8</td>
         </tr>
         <tr>
-            <td>A</td>
-            <td></td>
-            <td style="background: black"></td>
-            <td></td>
-            <td style="background: black"></td>
-            <td></td>
-            <td style="background: black"></td>
-            <td></td>
-            <td style="background: black"></td>
-        </tr>
-        <tr>
-            <td>B</td>
-            <td style="background: black"></td>
-            <td></td>
-            <td style="background: black"></td>
-            <td></td>
-            <td style="background: black"></td>
-            <td></td>
-            <td style="background: black"></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>C</td>
+            <td style="background: orange">A</td>
             <td></td>
             <td style="background: black"></td>
             <td></td>
@@ -76,7 +54,7 @@
             <td style="background: black"></td>
         </tr>
         <tr>
-            <td>D</td>
+            <td style="background: orange">B</td>
             <td style="background: black"></td>
             <td></td>
             <td style="background: black"></td>
@@ -87,7 +65,7 @@
             <td></td>
         </tr>
         <tr>
-            <td>E</td>
+            <td style="background: orange">C</td>
             <td></td>
             <td style="background: black"></td>
             <td></td>
@@ -98,7 +76,7 @@
             <td style="background: black"></td>
         </tr>
         <tr>
-            <td>F</td>
+            <td style="background: orange">D</td>
             <td style="background: black"></td>
             <td></td>
             <td style="background: black"></td>
@@ -109,7 +87,7 @@
             <td></td>
         </tr>
         <tr>
-            <td>G</td>
+            <td style="background: orange">E</td>
             <td></td>
             <td style="background: black"></td>
             <td></td>
@@ -120,7 +98,29 @@
             <td style="background: black"></td>
         </tr>
         <tr>
-            <td>H</td>
+            <td style="background: orange">F</td>
+            <td style="background: black"></td>
+            <td></td>
+            <td style="background: black"></td>
+            <td></td>
+            <td style="background: black"></td>
+            <td></td>
+            <td style="background: black"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td style="background: orange">G</td>
+            <td></td>
+            <td style="background: black"></td>
+            <td></td>
+            <td style="background: black"></td>
+            <td></td>
+            <td style="background: black"></td>
+            <td></td>
+            <td style="background: black"></td>
+        </tr>
+        <tr>
+            <td style="background: orange">H</td>
             <td style="background: black"></td>
             <td></td>
             <td style="background: black"></td>
