--- a/simpleform.html
+++ b/simpleform.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <style>
-    .wufoo {
+    wufoo {
         font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, sans-serif;
     }
 </style>
