--- a/thoi-khoa-bieu.html
+++ b/thoi-khoa-bieu.html
@@ -10,23 +10,24 @@
     Thời khóa biểu lớp T0908I
   </th>
 </table>
-<table broder="1px">
-  <tr>
-    <td>thứ 3</td>
-    <td>thứ 5</td>
-    <td>thứ 7</td>
+<table border="1">
+  <tr cosllpan="3px">
+    <td style="background: yellow" size="15px" align="center">thứ 3</td>
+    <td style="background: yellow" size="15px" align="center">thứ 5</td>
+    <td style="background: yellow" size="15px" align="center">thứ 7</td>
   </tr>
-  <tr>
-    <td>CF-T1,L1</td>
-    <td>CF-T2,L2</td>
-    <td>CF-T3,L3</td>
+  <tr colspan="3px">
+    <td size="15px" align="center">CF-T1,L1</td>
+    <td size="15px" align="center">CF-T2,L2</td>
+    <td size="15px" align="center">CF-T3,L3</td>
   </tr>
-  <tr>
-    <td>CF-T4,L4</td>
-    <td>CF-T5,L5</td>
-    <td>CF-T6,L6</td>
+  <tr colspan="3px">
+    <td size="15px" align="center">CF-T4,L4</td>
+    <td size="15px" align="center">CF-T5,L5</td>
+    <td size="15px" align="center">CF-T6,L6</td>
   </tr>
 </table>
+
 
 
 </body>
