--- a/js/test.html
+++ b/js/test.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<button type="button" onclick="showMessage();">ClickMe</button>
+ <script>
+     function showMessage(){
+         alert('Xin chào');
 
+     }
+
+ </script>
 </body>
 </html>
